tests/lit/tcheck/return_type_01.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2023-2025 Intel Corporation

function F(x : Boolean) -> Integer
begin
    return x;
// CHECK: Type error: type Integer does not match Boolean
end
